--- a/app.json
+++ b/app.json
@@ -33,6 +33,7 @@
       "favicon": "./assets/logo.png"
     },
     "plugins": [
+      "@react-native-community/datetimepicker",
       [
         "expo-image-picker",
         {
